@@ -327,6 +327,7 @@ Version ${Version} (${Date})
    the preceding word like GoTiengVietFx does.
  - Added support for rectangular selection in Komodo IDE and Komodo Edit.
  - Added support for Ace, the successor to Bespin.
+ - Added support for 280slides.
  - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
    main Add-ons window.  (The compatibility warning is not available in Firefox
    4.)
